--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -10,8 +10,9 @@
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
 
-  <listener>
+<!-- 리스너 클래스 미제작으로 web.xml에서 리스너 호출 -->
+<!--   <listener>
 	<listener-class>com.javalec.ex.ServletCL</listener-class>
-  </listener>
+  </listener> -->
 
 </web-app>
